// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EventDetail > aaaa 1`] = `"asasfa"`;

exports[`EventDetail > renders correctly with all props 1`] = `
<div>
  <div
    class="space-y-2 [&_a]:text-teal-500 [&_a]:underline [&_a]:transition [&_a:hover]:opacity-80"
  >
    <p
      class="font-bold text-lg"
    >
      Test Event
    </p>
    <p>
      Mon, May 1, 2023, 10:00 – 11:00 AM
    </p>
    <p>
      <a
        class=""
        href="https://zoom.us/j/123456789"
        rel="noreferrer"
        target="_blank"
      >
        Zoom Meeting
      </a>
    </p>
    <p
      class="overflow-ellipsis whitespace-nowrap overflow-x-hidden"
    >
      Test Location
    </p>
    <div>
      <p>
        John Doe
         &lt;
        john@example.com
        &gt;
      </p>
    </div>
    <p>
      This is a test event
    </p>
  </div>
</div>
`;

exports[`EventDetail > renders correctly with minimal props 1`] = `
<div>
  <div
    class="space-y-2 [&_a]:text-teal-500 [&_a]:underline [&_a]:transition [&_a:hover]:opacity-80"
  >
    <p
      class="font-bold text-lg"
    >
      Minimal Event
    </p>
    <p>
      Mon, May 1, 2023, 10:00 – 11:00 AM
    </p>
  </div>
</div>
`;

exports[`EventDetail > renders location as a link when it is a URL 1`] = `
<div>
  <div
    class="space-y-2 [&_a]:text-teal-500 [&_a]:underline [&_a]:transition [&_a:hover]:opacity-80"
  >
    <p
      class="font-bold text-lg"
    >
      URL Event
    </p>
    <p>
      Mon, May 1, 2023, 10:00 – 11:00 AM
    </p>
    <p
      class="overflow-ellipsis whitespace-nowrap overflow-x-hidden"
    >
      <a
        href="https://example.com"
        rel="noreferrer"
        target="_blank"
      >
        example.com
      </a>
    </p>
  </div>
</div>
`;
